--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,47 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.phone-picture{
+  width : 500px;
+  height : 450px;
+  /* object-fit: cover; */
+  object-fit: contain;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.phone-container {
+  background-color: white;
+  width: 620px;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: rgb(0 0 0/24%) 1px 2px 13px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.phone-name {
+  font-size: 36px;
+  padding: 5px;
+  margin-bottom: 0px;
+  text-align: center;
+}
+.phone-company{
+  font-size: 24px;
+  /* padding: 5px; */
+  color: grey;
+  margin-top: 0px;
+  text-align: center;
 }
 
-.card {
-  padding: 2em;
+.body {
+  background-color: whitesmoke;
+  font-family: Roboto;
+  margin: 16px;
 }
 
-.read-the-docs {
-  color: #888;
+.phone-list-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap : 2px;
+  margin: 2px;
+
 }
